--- a/style.css
+++ b/style.css
@@ -1,60 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 *
-{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Quicksand', sans-serif;
-}
-body 
-{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  background: #000;
-}
+
+
+
 section 
 {
-  position: absolute;
+  position: center;
   width: 100vw;
-  height: 100vh;
+  height: 30vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 2px;
+  gap: 13px;
   flex-wrap: wrap;
   overflow: hidden;
 }
 section::before 
 {
-  content: '';
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(#000,#0f0,#000);
-  animation: animate 5s linear infinite;
-}
-@keyframes animate 
-{
-  0%
-  {
-    transform: translateY(-100%);
-  }
-  100%
-  {
-    transform: translateY(100%);
-  }
-}
-section span 
-{
-  position: relative;
-  display: block;
-  width: calc(6.25vw - 2px);
-  height: calc(6.25vw - 2px);
-  background: #181818;
-  z-index: 2;
-  transition: 1.5s;
+
+
 }
 section span:hover 
 {
@@ -65,15 +29,13 @@ section span:hover
 section .signin
 {
   position: absolute;
-  width: 400px;
-  background: #222;  
+  width: 200px;
   z-index: 1000;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 40px;
   border-radius: 4px;
-  box-shadow: 0 15px 35px rgba(0,0,0,9);
 }
 section .signin .content 
 {
@@ -87,9 +49,7 @@ section .signin .content
 }
 section .signin .content h2 
 {
-  font-size: 2em;
-  color: #0f0;
-  text-transform: uppercase;
+
 }
 section .signin .content .form 
 {
@@ -109,7 +69,9 @@ section .signin .content .form .inputBox input
   width: 100%;
   background: #333;
   border: none;
-  outline: none;
+  outline: #b32e2e;
+  outline-width: 1;
+  outline-color: #b32e2e;
   padding: 25px 10px 7.5px;
   border-radius: 4px;
   color: #fff;
@@ -147,13 +109,13 @@ section .signin .content .form .inputBox i
 }
 .signin .content .form .links a:nth-child(2)
 {
-  color: #0f0;
+  color: #b32e2e;
   font-weight: 600;
 }
 .signin .content .form .inputBox input[type="submit"]
 {
   padding: 10px;
-  background: #0f0;
+  background: #b32e2e;
   color: #000;
   font-weight: 600;
   font-size: 1.35em;
@@ -163,20 +125,4 @@ section .signin .content .form .inputBox i
 input[type="submit"]:active
 {
   opacity: 0.6;
-}
-@media (max-width: 900px)
-{
-  section span 
-  {
-    width: calc(10vw - 2px);
-    height: calc(10vw - 2px);
-  }
-}
-@media (max-width: 600px)
-{
-  section span 
-  {
-    width: calc(20vw - 2px);
-    height: calc(20vw - 2px);
-  }
 }
